--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script type="text/template" id="item-home">
       <div class="container">
         <div class="row">
-          <div class="eight columns centered">
+          <div class="seven columns centered">
             <div class="row collapse">
               <div class="ten mobile-three columns">
                 <input type="text" placeholder="Search by Course Code or Course Name" />
@@ -49,16 +49,15 @@
             <a href="#!/search/">Advanced Search</a>
           </div>
         </div>
-
         <br/>
         <br/>
         <div class="row">
-          <div class="six columns panel">
+          <div class="six columns panel centered">
             <h4 class="subheader">Top Rated Courses</h4>
-            <ul>
-              <li>ECSE 428 - Omg!</li>
-              <li>ECSE 428 - Omg!</li>
-              <li>ECSE 428 - Omg!</li>
+            <ul class="disc">
+              <li><a href="#">ECSE 428 - Software Engineering Practice</a></li>
+              <li><a href="#">ECSE 323 - Digital System Design</a></li>
+              <li><a href="#">SOCI 209 - Anthropology of Religion</a></li>
             </ul>
           </div>
         </div>
